@@ -25,6 +25,7 @@ programName = "ufw"
 state_dir = "#STATE_PREFIX#"
 config_dir = "#CONFIG_PREFIX#"
 prefix_dir = "#PREFIX#"
+iptables_dir = "#IPTABLES_DIR#"
 
 class UFWError(Exception):
     '''This class represents ufw exceptions'''
